# open-pdf-creator

./: .gitignore  README.md  pyproject.toml  requirements.txt  snapcraft.yaml
installer/linux/: build_snap.sh
installer/linux/snap/: cups-backend.sh  open-pdf-creator.desktop
installer/windows/: build.py  setup.iss
scripts/: build_linux.sh  build_windows.bat  install_printer.sh  run_gui.sh  test_print_job.py  uninstall_printer.sh  update.sh
src/open_pdf_creator/: __init__.py  __main__.py  main.py
src/open_pdf_creator/core/: __init__.py  image_converter.py  pdf_processor.py  settings.py
src/open_pdf_creator/gui/: __init__.py  combiner_widget.py  main_window.py  save_dialog.py  settings_dialog.py
src/open_pdf_creator/printer/: __init__.py
src/open_pdf_creator/printer/linux/: __init__.py  cups_backend.py  cups_backend_debug.py  cups_backend_standalone.py  installer.py
src/open_pdf_creator/printer/windows/: __init__.py
src/open_pdf_creator/service/: __init__.py  print_handler.py
tests/: __init__.py  test_settings.py
